
export type AuthLoginLink = {
  id: string
  userId: string
  createdAt: Date
  activatedAt?: Date
  expireAt: Date
}
