
export type Chat = {
  id: string
  userId: string
  name: string
  createdAt: Date
  deletedAt?: Date
}
