
export type ChatUser = {
  chatId: string
  userId: string
  createdAt: Date
  deletedAt?: Date
}
