
export type User = {
  id: string
  name: string
  createdAt: Date
  deletedAt?: Date
}
