@startuml

' hide "E" circle
hide circle

' straight arrows
' skinparam linetype ortho
entity User {
  id: string
  --

  name: string
  createdAt: date
  deletedAt?: date
}

entity AuthLoginLink {
  id: string
  --

  userId: User
  createdAt: date
  activatedAt?: date
  expireAt: date
}
AuthLoginLink }o--|| User

entity Chat {
  id: string
  --

  userId: User
  name: string
  createdAt: date
  deletedAt?: date
}
Chat }o--|| User

entity ChatUser {
  id: string
  --

  chatId: Chat
  userId: User
  createdAt: date
  deletedAt?: date
}
ChatUser }o--|| User
Chat }o--|| ChatUser

entity ChatMessage {
  id: string
  --

  chatId: Chat
  userId: User
  content: string
  createdAt: date
  deletedAt?: date
}
ChatMessage }o--|| User
ChatMessage }o--|| Chat

@enduml